style.css
:root {
  --color-envelope: rgb(174,45,36);
  --color-ticket: rgb(241,199,20);
  --height-main: 480px;
  --height-inner: 460px;
}

*{
  margin: 0;
  padding: 0;
}

body {
  background-color: #fff;
  background-image: url('images/background.png');
}

#universal {
  margin-top: 50px;
  margin-left: 20px;
  margin-right: 20px;
  height: var(--height-main);
}

#formPage {
  height: inherit;
  width: inherit;

}

.formPart {
  max-width: 400px;
  height: inherit;
  left: 20px;
  right: 20px;
  position: absolute;
  background-repeat: no-repeat;
  background-position: bottom center;
  background-size: contain;
  margin-left: auto;
  margin-right: auto;
}

#pocketBack {
  z-index: -3;
  background-image: url('images/redpocketback.png');
}

#pocketInner{
  z-index: -2;
}

#ticket {
  margin: 0 20px 40px 20px;
  background-color: var(--color-ticket);
  border-radius: 5px;
  border-color: #000;
  border-width: 4px;
  height: var(--height-inner);
  border-style: solid;
}

#pocketFront{
  z-index: -1;
  background-image: url('images/redpocketfront.png');
}

#cornerMark {
  z-index: 2;
  margin-top: 10px;
  background-color: var(--color-envelope);
  width: 205px;
  height: 32px;
  font-weight: bold;
  font-size: 20;
  line-height: 32px;
  color: #fff;
  text-align: center;
  vertical-align:middle;
}

#titleDiv {
  width: 100%;
  margin-top: -5px;
  overflow: hidden;
  text-align: center;
}

#titleDiv > img {
  width: 90%;
  margin-left: auto;
  margin-right: auto;
  max-width: 277px;
  max-height: 123px;
}

#nameLabelDiv {
  background-image: url('images/namelabel.png');
  background-size: contain;
  margin-top: 20px;
  margin-left: 15px;
  width: 193px;
  height: 20px;
}

.inputDiv {
  background-color: #fff;
  border-radius: 5px;
  height: 36px;
  border-color: #fad133;
  border-width: 3px;
  border-style: solid;
}

#nameInputDiv {
  margin: 10px 15px 0 15px;
  border-color: #fad133;
}

.leftFloat{
  float: left;
  height: 36px;
}

.floatclear {
  clear: both;
}

#subjectLabelDiv {
  width: 25%;
  background-image: url('images/subject.png');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  margin-left: 5%;
}

#subjectInputDiv {
  margin-left: 3%;
  width: 60%;
  margin-top: -1px;
}

#timeLabelDiv {
  width: 25%;
  background-image: url('images/examtime.png');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  margin-left: 5%;
}

#timeInputDiv{
  margin-left: 3%;
  width: 65%;
  margin-top: -1px;
}

#y201 {
  width: 17.5%;
  background-image: url('images/201.png');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}

#yearInput {
  margin-left: 2px;
  margin-right: 2px;
  width: 9%;
  margin-top: -1px;
}

#year {
  width: 9%;
  background-image: url('images/year.png');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}

#monthInput {
  margin-left: 2px;
  margin-right: 2px;
  width: 15%;
  margin-top: -1px;
}

#month {
  width: 9%;
  background-image: url('images/month.png');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}

#dayInput {
  margin-left: 2px;
  margin-right: 2px;
  width: 15%;
  margin-top: -1px;
}

#day {
  width: 9%;
  background-image: url('images/day.png');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}

#drawDiv {
  text-align: center;
}

#drawDiv > a > img {
  margin-top: 5px;
  width: 85%;
}

#redrawDiv {
  text-align: center;
}

#redrawDiv > a > img {
  margin-top: 10px;
  width: 85%;
}


#drawClicker {
  z-index: 3;
  margin-left: 75%;
  margin-top: 20px;
  background-image: url('images/clicker.png');
  position: absolute;
  width: 32px;
  height: 40px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}

#redrawClicker {
  z-index: 3;
  margin-left: 66%;
  margin-top: 20px;
  background-image: url('images/clicker.png');
  position: absolute;
  width: 32px;
  height: 40px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}


#infoDiv {
  max-width: 400px;
  height: 21.5%;
  margin-left: auto;
  margin-right: auto;
  background-image: url('images/info.png');
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}

#resultDiv{
  max-width: 400px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 5px;
  border-color: #000;
  border-width: 3px;
  border-style: solid;
}

